[tool.poetry]
name = "cozygalvinism"
version = "0.1.0"
description = ""
authors = ["cozyGalvinism <jean@der-capta.in>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.4"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
